syntax = "proto3";

package result;
option go_package = "./result";


message EditableResultParams{
  string task_id = 2;
  string result = 3;
}

message Result{
  string id = 1;
  string task_id = 2;
  string content = 3;
}

message CreateResultRequest{
  EditableResultParams result = 1;
}

message CreateResultResponse{
  Result result = 1;
}

message ReadResultRequest{
  string result_id = 1;
}

message ReadResultResponse{
  Result result = 1;
}

message UpdateResultRequest{
  EditableResultParams result = 1;
}

message UpdateResultResponse{
  Result result = 1;
}

message DeleteResultRequest{
  string result_id = 1;
}

message DeleteResultResponse{
  string result_id = 1;
}

message ListResultRequest{
}

message ListResultResponse{
  Result result = 1;
}

service ResultService{
  rpc CreateResult (CreateResultRequest) returns (CreateResultResponse);
  rpc ReadResult(ReadResultRequest) returns (ReadResultResponse);
  rpc UpdateResult(UpdateResultRequest) returns (UpdateResultResponse);
  rpc DeleteResult(DeleteResultRequest) returns (DeleteResultResponse);
  rpc ListResult(ListResultRequest) returns (stream ListResultResponse);
}

